Fixed spacing issue for catalog products

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -118,7 +118,7 @@ label.bg-danger, span.bg-success {
 
 .product-description {
   font-size: 12px;
-  height: 150px;
+  height: 170px;
 }
 
 .product-tile {
